[package]
name = "timed-text"
version = "0.0.1"
description = "Timed Text"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
keywords = ["XML", "Timed-Text", "TTML"]
license = "MIT"
repository = "https://github.com/media-io/timed-text"
homepage = "https://github.com/media-io/timed-text"
documentation = "https://docs.rs/timed-text"
readme = "../README.md"
edition = "2018"

[dependencies]
log = "0.4"
xml-rs = "0.8"
xml-schema = { version = "0.0.3", path = "../xml-schema/xml_schema" }
xml-schema-derive = { version = "0.0.3", path = "../xml-schema/xml_schema_derive" }
yaserde_derive = { version = "0.3" }
yaserde = { version = "0.3" }
